crates/toml_edit/tests/snapshots/invalid/string/bad-concat.stderr
TOML parse error at line 1, column 21
  |
1 | no_concat = "first" "second"
  |                     ^
unexpected key or value, expected newline, `#`
